--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,10 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        Hello
+        <ul>
+          <li><a href="https://github.com/datacentricdesign/dcd-book#test">Test</a></li>
+          <li><a href="https://github.com/datacentricdesign/dcd-book#test2">Test 2</a></li>
+        </ul>
         
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
