--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-          <li><a href="https://github.com/datacentricdesign/dcd-book#test">Test</a></li>
-          <li><a href="https://github.com/datacentricdesign/dcd-book#test2">Test 2</a></li>
+          <li><a href="#test">Test</a></li>
+          <li><a href="#test2">Test 2</a></li>
         </ul>
         
         {% if site.github.is_project_page %}
