--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <ul>
+        <ul class="view">
           <li><a href="#test">Test</a></li>
           <li><a href="#test2">Test 2</a></li>
         </ul>
