--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,8 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <ul class="view">
-          <li><a href="#test">Test</a></li>
-          <li><a href="#test2">Test 2</a></li>
-        </ul>
+        <p class="view"><a href="#test">Test</a></p>
+        <p class="view"><a href="#test2">Test2</a></p>
         
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
