--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
         </header>
 
-        <section id="downloads" class="clearfix">
 
+        <aside style="float: left">
           <ul>
             <li>
               Tutorials
@@ -80,19 +80,8 @@
               </ul>
             </li>
           </ul>
+        </aside>
 
-          {% if site.show_downloads %}
-          <a href="{{ site.github.zip_url }}" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="{{ site.github.tar_url }}" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          {% endif %}
-	{% if site.github.public %}
-	  {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
-	  {% else %}
-          <a href="{{ site.github.owner_url }}" id="view-on-github" class="button"><span>View on GitHub</span></a>
-	  {% endif %}
-	{% endif %}
-        </section>
         <hr>
         <section id="main_content">
           {{ content }}
