--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         </header>
 
 
-        <aside style="float: left">
+        <aside id="sidebar">
           <ul>
             <li>
               Tutorials
