developing python sdk doc

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -18,6 +18,25 @@ a:active
 main
   flex: 1 0 auto
 
+h1
+  font-size: 3em
+
+h2
+  font-size: 2em
+
+h3
+  font-size: 1em
+
+#page-info
+  font-size: 3em
+
+.highlight
+  max-width: 700px
+  padding: 1px
+
+.row
+  max-width: 700px
+
 header,
 main,
 footer
@@ -34,7 +53,7 @@ header
     text-decoration: none
 
   .background
-    background: #bc5100
+    background: #c66900
 
 a
   &.button-collapse
@@ -59,12 +78,12 @@ nav
 nav
   &.top-nav
     height: 80px
-    background: #f57f17
+    background: #ff9800
 
 // Footer
 footer.page-footer
   margin-top: 10px
-  background: #f57f17
+  background: #ff9800
 
   .row
     margin-bottom: 0px
@@ -74,7 +93,7 @@ footer.page-footer
 
 // Misc
 blockquote
-  border-left-color: #f57f17
+  border-left-color: #ff9800
 
 main
   ul
