--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,11 +58,11 @@
         </li>
         <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">home</i>Home</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">description</i>Projects</a></li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Resources</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/resources"><i class="material-icons">sort</i>Resources</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags</a></li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/feed.xml" target="_blank"><i class="material-icons">rss_feed</i>RSS</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/about"><i class="material-icons">person</i>About</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/api"><i class="material-icons">build</i>API</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/python-sdk"><i class="material-icons">build</i>Python SDK</a></li>
       </ul>
     </header>
     <main>
