added javascript sdk page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,6 +63,7 @@
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="https://dwd.tudelft.nl/api/docs" target="_blank"><i class="material-icons">build</i>API</a></li>
         <li><a class="waves-effect" href="{{site.baseurl}}/python-sdk"><i class="material-icons">build</i>Python SDK</a></li>
+        <li><a class="waves-effect" href="https://github.com/datacentricdesign/dcd-sdk-js/blob/master/README.md"><i class="material-icons">build</i>JavaScript SDK</a></li>
       </ul>
     </header>
     <main>
