--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,8 +62,8 @@
         <li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags</a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect" href="https://dwd.tudelft.nl/api/docs" target="_blank"><i class="material-icons">build</i>API</a></li>
-        <li><a class="waves-effect" href="{{site.baseurl}}/python-sdk"><i class="material-icons">build</i>Python SDK</a></li>
-        <li><a class="waves-effect" href="https://raw.githubusercontent.com/datacentricdesign/dcd-sdk-js/master/README.md"><i class="material-icons">build</i>JavaScript SDK</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/sdk-python"><i class="material-icons">build</i>Python SDK</a></li>
+        <li><a class="waves-effect" href="{{site.baseurl}}/sdk-js"><i class="material-icons">build</i>JavaScript SDK</a></li>
       </ul>
     </header>
     <main>
