--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -120,14 +120,16 @@ main
 
 
 details, summary
-  margin-bottom: 10px
+  margin-bottom: 15px
+
+details
+  background: #DFDFDF
 
 summary::-webkit-details-marker
   display: none
 
 summary:after
-  background: red
-  border-radius: 5px
+  background: #ff9800
   content: "+"
   color: #fff
   float: left
